# paladin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  config.toml.sample  docker-compose.yml  entrypoint.sh  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  IndexPage.jsx  SarifPage.jsx  styles.css
frontend/src/components/: FileViewer.jsx  FilterPanel.jsx  GhsaReport.jsx  GhsaReportGroup.jsx  Header.jsx  RefreshControl.jsx  Report.jsx  ReportGroup.jsx  SarifReport.jsx  SarifReportGroup.jsx  SearchBar.jsx
models/: data_models.py  enums.py  models.py  response_models.py
refresher/: cwe_import.py  gh_apis.py  refresh.py  repo_guesser.py
scanner/: gemini_ops.py  scan.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
utils/: config_verifier.py  mongo_utils.py
