[project]
name = "Paladin"
version = "0.1.0"
description = "Runs semgrep and provides a web-ui to view results"
authors = [
    {name = "Anuraag Baishya",email = "baishya.anuraag1920@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (==3.1.2)",
    "gitpython (==3.1.45)",
    "pymongo (==4.14.1)",
    "tomli (>=2.2.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "google-genai (>=1.39.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
